--- a/src/components/search/search.module.css
+++ b/src/components/search/search.module.css
@@ -1,11 +1,106 @@
-.h1 {
-	/* color: lightcoral; */
-	@mixin color;
-	&__title {
-		background-color: green;
+body {
+	padding: 100px;
+}
+
+.search {
+
+}
+
+.inpyt {
+	max-width: 540px;
+	width: 100%;
+	height: 48px;
+	border-radius: 12px 12px 0px 0px;
+	padding: 0 18px;
+	background-color: white;
+	color: #CACACA;
+	font-size: 14px;
+	line-height: 21px;
+	border: none;
+	outline: none;
+	border: 1px solid #DDDDDD;
+	box-sizing: border-box;
+
+	&:focus {
+		box-shadow: 0px 1px 4px 1px rgba(34, 60, 80, 0.2);
+	}
+
+	&::placeholder {
+		color: #CACACA;
 	}
 }
 
-.h2 {
-	color: lightsalmon;
+.title {
+	font-size: 14px;
+	line-height: 21px;
+	color: #6E6E6E;
+	padding: 0 24px;
+	margin-bottom: 16px;
+}
+
+.list {
+	margin: 0;
+	padding: 0;
+	height: 100%;
+	border: 1px solid #DDDDDD;
+	border-radius: 0px 0px 12px 12px;
+	max-width: 540px;
+	padding: 22px 0;
+	box-sizing: border-box;
+
+	&:focus {
+		box-shadow: 0px 1px 4px 1px rgba(34, 60, 80, 0.2);
+	}
+}
+
+.item {
+	position: relative;
+	display: flex;
+	align-items: center;
+	padding: 0 44px;
+	margin: 8px 0;
+	list-style: none;
+	transition: .3s ease-out;
+	cursor: pointer;
+	left: 0;
+	height: 42px;
+
+	&:hover {
+		background-color: #F9F9F9;
+	}
+
+	&:before {
+		content: '';
+		width: 6px;
+		height: 40px;
+		background: #6F32F1;
+		border-radius: 20px 0 0 20px;
+		top: 0;
+		right: 0;
+    position: absolute;
+		opacity: 0;
+		transition: .2s ease-in;
+	}
+
+	&:hover:before {
+		opacity: 1;
+	}
+}
+
+.text {
+	display: inline-block;
+	margin: 0;
+	color: #6E6E6E;
+	font-size: 14px;
+	line-height: 21px;
+}
+
+.light {
+	color: #CACACA;
+}
+
+.dash {
+	margin: 0 12px;
+	font-size: 14px;
+	line-height: 21px;
 }
